--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 <!DOCTYPE html>
-<h1>Meu primeiro site</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Andressa Books</title>
+</head>
+<body>
+    <h1></h1> Esse é meu novo site
+
+</body>
 </html>
