--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andressa Books</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1></h1> Esse é meu novo site
-
+    <header> class= "cabecalho"
+         <img class= "cabecalho-logo" src="img/logo-rosa.png" alt="">
+         </nav>
+             a class="cabecalho-link"
+             a class="cabecalho-link"
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
